# rustfetch

./: Cargo.toml
src/: ascii.rs  main.rs
