[package]
name = "rustfetch"
description = "a simple neofetch-like cli program"
author = "blueb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored="2.0.4"
sysinfo="0.29.10"
whoami="1.4.1"
clap="4.4.6"